force-app/main/default/objects/Knowledge__kav/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <description>The answer portion of a Q&amp;A article.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Answer</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>