force-app/main/default/objects/Knowledge__kav/fields/Article_Body__c.field-meta.xml
<CustomField>
    <fullName>Article_Body__c</fullName>
    <description>Content of the Knowledge Article.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Article Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>