force-app/main/default/objects/Knowledge__kav/fields/External_Impacts__c.field-meta.xml
<CustomField>
    <fullName>External_Impacts__c</fullName>
    <description>External impacts field for bulletin or other applicable article type.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>External Impacts</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>