force-app/main/default/objects/Knowledge__kav/fields/Impacted_Departments__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Departments__c</fullName>
    <description>Departments impacted by a bulletin or other applicable article type.</description>
    <label>Impacted Department(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Bank_Departments</valueSetName>
    </valueSet>
</CustomField>