force-app/main/default/objects/Knowledge__kav/fields/Internal_Impacts__c.field-meta.xml
<CustomField>
    <fullName>Internal_Impacts__c</fullName>
    <description>Internal impacts field for bulletin or other applicable article type.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Internal Impacts</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>