force-app/main/default/objects/Knowledge__kav/fields/Internal_Policy__c.field-meta.xml
<CustomField>
    <fullName>Internal_Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Policy</label>
    <referenceTo>Internal_Policy__c</referenceTo>
    <relationshipLabel>Knowledge Articles</relationshipLabel>
    <relationshipName>Policy_Knowledge</relationshipName>
    <type>Lookup</type>
</CustomField>