force-app/main/default/objects/Knowledge__kav/fields/Internal_Public__c.field-meta.xml
<CustomField>
    <fullName>Internal_Public__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal Public</label>
    <type>Checkbox</type>
</CustomField>