force-app/main/default/objects/Knowledge__kav/fields/Other_Impacts__c.field-meta.xml
<CustomField>
    <fullName>Other_Impacts__c</fullName>
    <description>Other impacts field for bulletin or other applicable article type.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Impacts</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>