force-app/main/default/objects/Knowledge__kav/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary contact for a bulletin or other applicable article type.</description>
    <label>Primary Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bulletin_Primary_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>