force-app/main/default/objects/Knowledge__kav/fields/Secondary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Secondary contact for a bulletin or other applicable article type.</description>
    <label>Secondary Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bulletin_Secondary_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>