force-app/main/default/objects/Knowledge__kav/fields/Sort_Number__c.field-meta.xml
<CustomField>
    <fullName>Sort_Number__c</fullName>
    <description>Used to sort policy articles in related list of parent Internal Policy record.</description>
    <label>Sort Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>