force-app/main/default/objects/Knowledge__kav/recordTypes/Bulletin.recordType-meta.xml
<RecordType>
    <fullName>Bulletin</fullName>
    <active>true</active>
    <label>Bulletin</label>
</RecordType>