force-app/main/default/objects/Knowledge__kav/recordTypes/Customer_Education.recordType-meta.xml
<RecordType>
    <fullName>Customer_Education</fullName>
    <active>false</active>
    <label>Customer Education</label>
</RecordType>