force-app/main/default/objects/Knowledge__kav/recordTypes/General_Article.recordType-meta.xml
<RecordType>
    <fullName>General_Article</fullName>
    <active>true</active>
    <label>General Article</label>
</RecordType>