force-app/main/default/objects/Knowledge__kav/recordTypes/Policy_Article.recordType-meta.xml
<RecordType>
    <fullName>Policy_Article</fullName>
    <active>true</active>
    <label>Policy Article</label>
</RecordType>