force-app/main/default/objects/Knowledge__kav/recordTypes/Procedure.recordType-meta.xml
<RecordType>
    <fullName>Procedure</fullName>
    <active>true</active>
    <label>Procedure</label>
</RecordType>